app/assets/stylesheets/components/navbar_modal.scss
@media (max-width: 991px) {
  .modal-fullscreen-menu {
    background-color: white;
    .modal-dialog {
      margin: 0 auto;
      width: 100%;
      max-width: 768px;
      display: flex;
      height: 100%;
      align-items: center;
    }

    .modal-content {
      margin: auto;
      background-color: transparent;
      box-shadow: none;
      border: none;
      width: 100%;
      .modal-links {
        text-align: center;
        list-style-type: none;
        .dropdown-divider {
          background-color: $primary;
          margin: .5rem 3em;
          border: 1px solid $primary;
        }
      }
      .modal-header {
        margin: auto;
        padding: 0;
        width: 100%;
        justify-content: center;
        border: none;
        .close {
          margin-right: 20px;
          margin-top: 1.15rem;
          display: inline-flex;
          position: absolute;
          top: 0;
          right: 0;
          font-size: 3rem;
          font-weight: bold;
          color: $button-primary;
        }
        .navbar-brand {
          margin: 0;
        }
      }
    }
  }
  // Modal Links

  .nav-item {
    .nav-link {
      font-size: 200%;
      font-weight: normal;
      letter-spacing: 0.05em;
      border: none;
      transition: all 0.25s ease;
      background-color: transparent;
      color: $primary;
      padding: 5vh 0;
      font-size: 5vh;
      line-height: 0;
      line-height: 0;

      &:hover {
        color: $black;
      }
    }

    &.active .nav-link {
      color: $black;
    }
  }
}

